Fix horizontal scroll issue by using width: 100% instead of 100vw

--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: var(--text-dark);
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 .App {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 main {
@@ -56,9 +58,6 @@ main {
 
 .section {
   padding: 80px 0;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
-  overflow-x: hidden;
 }
 
 .section-title {
