--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -3,7 +3,7 @@
   padding: 100px 0 80px;
   text-align: center;
   color: var(--text-light);
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -22,7 +22,7 @@
 
 .services-detail {
   background-color: var(--bg-light);
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
