--- a/src/pages/Video.css
+++ b/src/pages/Video.css
@@ -18,7 +18,7 @@
   color: white;
   padding: 120px 0 80px;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -39,7 +39,7 @@
 .video-intro {
   padding: 80px 0;
   background-color: var(--light-gray);
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -64,7 +64,7 @@
 /* Featured Videos Section */
 .featured-videos {
   padding: 80px 0;
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -137,7 +137,7 @@
 .video-services {
   padding: 80px 0;
   background-color: var(--light-gray);
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -187,7 +187,7 @@
 /* Video Benefits Section */
 .video-benefits {
   padding: 80px 0;
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -226,7 +226,7 @@
 .video-process {
   padding: 80px 0;
   background-color: var(--light-gray);
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -281,7 +281,7 @@
   background: linear-gradient(135deg, var(--primary-color) 0%, var(--accent-color) 100%);
   color: white;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   margin-left: calc(-50vw + 50%);
 }
 
